.rstudio-desktop/projects/9c4bc32b/console07/7A6D6998
03 Dec 2020 07:45:35 [rsession-chrisadore] ERROR system error 2 (No such file or directory) [description: Error changing directory: '/Users/chrisadore/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNA seq for U_D8 S1 041620KD 1st/DEseq2']; OCCURRED AT rstudio::core::Error rstudio::core::system::ChildProcess::run() src/cpp/core/system/PosixChildProcess.cpp:720; LOGGED FROM: rstudio::core::Error rstudio::core::system::ChildProcess::run() src/cpp/core/system/PosixChildProcess.cpp:720
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2[?1034hYuns-MacBook-Air:DEseq2 chrisadore$ [KYuns-MacBook-Air:DEseq2 chrisadore$ python setup.py build
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: can't open file 'setup.py': [Errno 2] No such file or directory
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ python setup.py build[1@3
/Library/Frameworks/Python.framework/Versions/3.8/bin/python3: can't open file 'setup.py': [Errno 2] No such file or directory
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ python3 --version
Python 3.8.5
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ pip install numpy
bash: pip: command not found
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ pythone3[K[K3
Python 3.8.5 (v3.8.5:580fbb018f, Jul 20 2020, 12:11:27) 
[Clang 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> pip install numpy
  File "<stdin>", line 1
    pip install numpy
        ^
SyntaxError: invalid syntax
>>> hepl[K[Klp numpy
  File "<stdin>", line 1
    help numpy
         ^
SyntaxError: invalid syntax
>>> 
[1]+  Stopped                 python3
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ ls
1128.R			DEXSeq.R		functional assay.R
2passHTcount		DEseq2.Rproj		getAsscession.R
DESeq2 2.R		Summary Counts.R
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ pip install ipython
bash: pip: command not found
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ pip
bash: pip: command not found
]0;~/OneDrive - åœ‹ç«‹å°ç£å¤§å­¸/RNAseq1/DEseq2Yuns-MacBook-Air:DEseq2 chrisadore$ python3
Python 3.8.5 (v3.8.5:580fbb018f, Jul 20 2020, 12:11:27) 
[Clang 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> python3
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'python3' is not defined
>>> pip
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pip' is not defined
>>> license
Type license() to see the full license text
>>> credits
    Thanks to CWI, CNRI, BeOpen.com, Zope Corporation and a cast of thousands
    for supporting Python development.  See www.python.org for more information.
>>> p[Ki[Kni[Kumpy
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'numpy' is not defined
>>> version
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'version' is not defined
>>> pip install HTSeq
  File "<stdin>", line 1
    pip install HTSeq
        ^
SyntaxError: invalid syntax
>>> 